--- a/example/web5auth-xdc/public/index.html
+++ b/example/web5auth-xdc/public/index.html
@@ -1,43 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="https://i.ibb.co/yShkFGZ/w5BlueT.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web5 Nexus Social Login Demo"
-    />
-    <link rel="apple-touch-icon" href="https://i.ibb.co/yShkFGZ/w5BlueT.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Web5 Nexus Social login Demo</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="https://lh3.googleusercontent.com/fife/AK0iWDzoYTHWdtLQSNfP9DYeb2gS0gIhIv5NWJGErMZL6z5aEt3ycyUq6itUGwortM_7cbWhFHascxn7IoiQ_-y9PVBESJoO9V4oxCQtx2BCwqWIrXxoy26wVROxLeMtxhj249AK3chtlcUOMX2ajkiSKGfyglO1Vrnt0nJfJHv6VguwTJ0nBATxi6S4d0EGmwtPvGE1_iHNY_1Pd_pFinTW2rIgkTXILhEc00wzwTwAz0QQFWys2KcJ4-Bvk7dvMOcOSZ9ZtH8-yQOtygCFByX4jq6RSPdTpvLOuLVHGCirpDsSmhK4v0rjr0aj9ryniOVBVGriXkEYyZ91bQogkIQXkxjkZU7PSKqOdNNK3UYXr14-EKE8vEq-kUzXa7am6mc9guP5T-BBpQNtFeDTZidNuqIGNkccyttsKXpyhYutrfd8dHbTkQg6GEUtkKLyUHbdJA4mjCWfDygoL2BhoxR3kNsaVb0H-WWHEDlU34kgBFis-OlpuAi_JEXKfaQ2Pwq1aXcOgKVS72mQiVQ1YMIyjwwBpSmEV0xHGxmgwuuQ-aHKGE5wGOEsyXdvkYw_hhScJ1-EoI-A0csR1y63XU2jrPI9HohdMOJ61clGAE7OBz3vGa5ayqAJ_QaUuCLbXVA6JOy6CJmyhD47rLe6-JMypcmmOu5EmilmVwwRGEPmL44RoEQj8OvGejtpVX-sbq8y_KweyfO7e9FmS_mJwbfauMuCGLAOD228QOHhNEiwCef7PWDxIuiwn7TU-mnKpifdQ9TdNWrJDSTqRlIA72cJE9BgBqVdR5rjxpg-wjOnkbnnrWVDEWGZadKQNmwDX_thC2S6S6hvy7AQlSOx_scCie35tBC5kJd1uFJPRd1JJ3IPoOMfY7qCBNmL9lKjhSEIlGRqUB55tg9P2K55Y4FMHQa-wf9LNOkNY0tjjlb9ReJTlr6t4seMo35p0SPvqF1z6BcpQ2kSu-xI83yA_cxQ5aNkfMupTf_X0r9Ux_z-o-1ezulR2aXzDgEkVZoqLNAsNPdeC90XZAMpZdhUODADDBT_OEoqPOBbyRuzvd-zN6fsKQxB0Sinkq-e-RvwzD57redO6g8uyb4U-jcotvb7kCx5id1MgAhp6raiuft94XUhkLXR-1MzCFn4ZgGXvHB8UnVSSpFZLo7BexMaIgwE2bXVA8Pw1srlVgz6lzZiJj6OiyqUY4cxkiGE035ft5sSxZKUwEMHydNW4SM9UVWxyQ53e_P0mGXi2eLioSSkJrK7eQsDjEwH9O5-LZsk6EbLQZZLB9xR7fSKnfok1uYoy1KaF9lI2W9ophnMUC4XgqiqPTo-kXMbMMNXt7OtucGOOLko266nIBR_uoTz7RKSxAybocv-Ja8epQApqe7KWWAMEx-0ma6QadJVTHx4n-5wGymNaUhAzo122DHpD-jWIkkryFFSU9uUh9xFCuB4lGmCDJ-emlWdzMQENsNrY7coawlJGGIDe1uMQ1t06q5ZIHi66KM8a-8t-pfC39TB9UZutVFMBSAYP7GqMSN1Rl2yocoq4HAfbgJNttgck5fJQQh8xpke5UixONqiRf_chKkwK-EIbApjY9UvI25go3DnqLAguJ5Qfw0jinxPeor4GMAuhjmD5IYp2ep_ZEdRdKQKS-gyDviV9h1PLlE2bFLXd6hudP1UFmxGv4lLAH_cQsgADMfEdK_yoWfGCBOQ7IGm16GYDjk3L5_ecjKqVqFFrnn1TNy1c5uY7gWQ86L40DF-q5osRwoFz3mSNn_pMWQJb_6nWzs8AVnYMtQLKeESfMzFDpoyvwgp4NGqTTHELSp2ZWrhnR4Zo0eqG_XByqdslJlu1IfAE8T-s-vTgydsjNGFlXMRuaZzC9Br-KpmCT-gXtdg=w400-h380-p-k-rw-nu-v1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web5 Social Login" />
+  <link rel="apple-touch-icon" href="https://lh3.googleusercontent.com/fife/AK0iWDzoYTHWdtLQSNfP9DYeb2gS0gIhIv5NWJGErMZL6z5aEt3ycyUq6itUGwortM_7cbWhFHascxn7IoiQ_-y9PVBESJoO9V4oxCQtx2BCwqWIrXxoy26wVROxLeMtxhj249AK3chtlcUOMX2ajkiSKGfyglO1Vrnt0nJfJHv6VguwTJ0nBATxi6S4d0EGmwtPvGE1_iHNY_1Pd_pFinTW2rIgkTXILhEc00wzwTwAz0QQFWys2KcJ4-Bvk7dvMOcOSZ9ZtH8-yQOtygCFByX4jq6RSPdTpvLOuLVHGCirpDsSmhK4v0rjr0aj9ryniOVBVGriXkEYyZ91bQogkIQXkxjkZU7PSKqOdNNK3UYXr14-EKE8vEq-kUzXa7am6mc9guP5T-BBpQNtFeDTZidNuqIGNkccyttsKXpyhYutrfd8dHbTkQg6GEUtkKLyUHbdJA4mjCWfDygoL2BhoxR3kNsaVb0H-WWHEDlU34kgBFis-OlpuAi_JEXKfaQ2Pwq1aXcOgKVS72mQiVQ1YMIyjwwBpSmEV0xHGxmgwuuQ-aHKGE5wGOEsyXdvkYw_hhScJ1-EoI-A0csR1y63XU2jrPI9HohdMOJ61clGAE7OBz3vGa5ayqAJ_QaUuCLbXVA6JOy6CJmyhD47rLe6-JMypcmmOu5EmilmVwwRGEPmL44RoEQj8OvGejtpVX-sbq8y_KweyfO7e9FmS_mJwbfauMuCGLAOD228QOHhNEiwCef7PWDxIuiwn7TU-mnKpifdQ9TdNWrJDSTqRlIA72cJE9BgBqVdR5rjxpg-wjOnkbnnrWVDEWGZadKQNmwDX_thC2S6S6hvy7AQlSOx_scCie35tBC5kJd1uFJPRd1JJ3IPoOMfY7qCBNmL9lKjhSEIlGRqUB55tg9P2K55Y4FMHQa-wf9LNOkNY0tjjlb9ReJTlr6t4seMo35p0SPvqF1z6BcpQ2kSu-xI83yA_cxQ5aNkfMupTf_X0r9Ux_z-o-1ezulR2aXzDgEkVZoqLNAsNPdeC90XZAMpZdhUODADDBT_OEoqPOBbyRuzvd-zN6fsKQxB0Sinkq-e-RvwzD57redO6g8uyb4U-jcotvb7kCx5id1MgAhp6raiuft94XUhkLXR-1MzCFn4ZgGXvHB8UnVSSpFZLo7BexMaIgwE2bXVA8Pw1srlVgz6lzZiJj6OiyqUY4cxkiGE035ft5sSxZKUwEMHydNW4SM9UVWxyQ53e_P0mGXi2eLioSSkJrK7eQsDjEwH9O5-LZsk6EbLQZZLB9xR7fSKnfok1uYoy1KaF9lI2W9ophnMUC4XgqiqPTo-kXMbMMNXt7OtucGOOLko266nIBR_uoTz7RKSxAybocv-Ja8epQApqe7KWWAMEx-0ma6QadJVTHx4n-5wGymNaUhAzo122DHpD-jWIkkryFFSU9uUh9xFCuB4lGmCDJ-emlWdzMQENsNrY7coawlJGGIDe1uMQ1t06q5ZIHi66KM8a-8t-pfC39TB9UZutVFMBSAYP7GqMSN1Rl2yocoq4HAfbgJNttgck5fJQQh8xpke5UixONqiRf_chKkwK-EIbApjY9UvI25go3DnqLAguJ5Qfw0jinxPeor4GMAuhjmD5IYp2ep_ZEdRdKQKS-gyDviV9h1PLlE2bFLXd6hudP1UFmxGv4lLAH_cQsgADMfEdK_yoWfGCBOQ7IGm16GYDjk3L5_ecjKqVqFFrnn1TNy1c5uY7gWQ86L40DF-q5osRwoFz3mSNn_pMWQJb_6nWzs8AVnYMtQLKeESfMzFDpoyvwgp4NGqTTHELSp2ZWrhnR4Zo0eqG_XByqdslJlu1IfAE8T-s-vTgydsjNGFlXMRuaZzC9Br-KpmCT-gXtdg=w400-h380-p-k-rw-nu-v1" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://use.typekit.net/vaf2ixl.css">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&amp;family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;display=swap"
+    rel="stylesheet">
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <title>Web5 Auth Demo</title>
+</head>
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+</body>
+
 </html>
